Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.23      2017-07-18 03:12:24 -0400
  - Production release identical to 1.22_01 release.

1.22_01   2017-07-14 07:21:00 -0400
  - Fix testing failures on Windows introduced in 1.21_01

1.21_01   2017-07-13 13:37:09 -0400
  - Migrate to using Test2::V0 internally

1.20      2017-07-13 11:17:42 -0400
  - Production release identical to 1.19_08 release.

1.19_08   2017-07-12 08:22:41 -0400
  - Diagnostic release

1.19_07   2017-07-12 07:53:55 -0400
  - Diagnostic release

1.19_06   2017-07-11 05:34:30 -0400
  - Diagnostic release

1.19_05   2017-07-09 11:35:59 -0400
  - Diagnostic release

1.19_04   2017-07-07 16:26:41 -0400
  - Add support for stdin option that was lost in the Capture::Tiny migration
  - Officially drop support for Perl 5.6 (support for 5.6 was already
    implicitly dropped when we migrated to Capture::Tiny).
  - A near term future version will also drop support for the old pre-Test2
    Test::Builder.

1.19_03   2017-07-07 10:14:25 -0400
  - Use Test2::V0 instead of Test2::Bundle::Extended for Test2 tests

1.19_02   2017-06-21 17:06:47 -0400
  - Identical to 1.19_01

1.19_01   2017-05-01 06:12:01 -0400
  - Use Capture::Tiny instead of IPC::Run3 (Paul Cochrane/PTC++ gh#4, gh#15)
  - Minor documentation fixes (Paul Cochrane/PTC++)

1.18      2017-04-12 07:01:14 -0400
  - Production release identical to 1.17_02 release.

1.17_02   2017-04-10 08:39:46 -0400
  - Use three argument open

1.17_01   2017-04-10 06:51:38 -0400
  - Handle scripts with -T taint mode (gh#13)

1.16      2017-03-04 12:16:10 -0500
  - Stricter useage of plans.

1.15      2017-02-14 07:08:51 +1100
  - Fix bug where list reference arguments to script_compiles
    and script_runs are modified (gh#9)

1.14      2016-10-13 11:04:48 -0400
  - Fix a regex in a test that fails on recent versions of
    Test2 on Windows (possibly others) (gh#8)
  - One of the tests was unreasonably slow, so it does