@@ -1,0 +1,1 @@
+die "warnings are off" unless $^W;
